Adding vertical scrolling for choice fields

--- a/src/CommonBundle/Resources/public/css/common-theme.css
+++ b/src/CommonBundle/Resources/public/css/common-theme.css
@@ -102,7 +102,7 @@ header {
   position: relative !important;
   width: 100% !important;
   background: none;
-  overflow-x: scroll !important;
+  overflow-y: scroll !important;
 }
 
 .dropdown-toggle{
