--- a/src/AdminBundle/Resources/views/country/index.html.twig
+++ b/src/AdminBundle/Resources/views/country/index.html.twig
@@ -1,39 +1,32 @@
 {% extends 'AdminBundle::admin-layout.html.twig' %}
 
 {% block content %}
-    <h1>Countries list</h1>
+     <div class="row top-list">
+        <div class="row">
+            <h1 class="col-lg-4 col-sm-4">Liste des pays</h1>
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_country_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau pays</button></a>
+        </div>
+    </div>
 
-    <table>
+    <table class="table table-bordered table-responsive table-striped" id="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for country in countries %}
             <tr>
-                <td><a href="{{ path('admin_country_show', { 'id': country.id }) }}">{{ country.id }}</a></td>
                 <td>{{ country.name }}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_country_show', { 'id': country.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_country_edit', { 'id': country.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    <a href="{{ path('admin_country_show', { 'id': country.id }) }}"><input type='button' class='btn btn-default' value='Voir'></a>
+                    <a href="{{ path('admin_country_edit', { 'id': country.id }) }}"><input type='button' class='btn btn-default' value='Modifier'></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_country_new') }}">Create a new country</a>
-        </li>
-    </ul>
 {% endblock %}
