--- a/src/AdminBundle/Resources/views/membership/show.html.twig
+++ b/src/AdminBundle/Resources/views/membership/show.html.twig
@@ -12,7 +12,7 @@
             </tr>
             <tr>
                 <th>Date de début</th>
-                <td>{{ membership.beginDate|date('Y-m-d') }}</td>
+                <td>{{ membership.beginDate|date('d/m/Y') }}</td>
             </tr>
             <tr>
                 <th>Montant</th>
