--- a/src/AdminBundle/Resources/views/publisher/index.html.twig
+++ b/src/AdminBundle/Resources/views/publisher/index.html.twig
@@ -1,13 +1,20 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Publishers list</h1>
+    <div class="row top-list">
+        <div class="row">
+            <h1 class="col-lg-4 col-sm-4">Liste des éditeurs</h1>
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_publisher_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouvel éditeur</button></a>
+        </div>
+    </div>
 
-    <table class="table table-bordered table-responsive">
+    <table class="table table-bordered table-responsive table-striped" id="table">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Url</th>
+                <th>Nom</th>
+                <th>Site web</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -15,25 +22,13 @@
         {% for publisher in publishers %}
             <tr>
                 <td>{{ publisher.name }}</td>
-                <td>{{ publisher.url }}</td>
+                <td><a href="{{ publisher.url }}" target="_blank">{{ publisher.url }}</a></td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_publisher_show', { 'id': publisher.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_publisher_edit', { 'id': publisher.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    <a href="{{ path('admin_publisher_show', { 'id': publisher.id }) }}"><input type='button' class='btn btn-default' value='Voir'></a>
+                    <a href="{{ path('admin_publisher_edit', { 'id': publisher.id }) }}"><input type='button' class='btn btn-default' value='Modifier'></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_publisher_new') }}">Create a new publisher</a>
-        </li>
-    </ul>
 {% endblock %}
