--- a/src/AdminBundle/Resources/views/theme/index.html.twig
+++ b/src/AdminBundle/Resources/views/theme/index.html.twig
@@ -1,13 +1,19 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
+    <div class="row top-list">
+        <div class="row">
+            <h1 class="col-lg-4 col-sm-4">Liste des thèmes</h1>
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_theme_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau thème</button></a>
+        </div>
+    </div>
 
-    <h1>Themes list</h1>
-
-    <table class="table table-bordered table-responsive">
+    <table class="table table-bordered table-responsive table-striped" id="table">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -16,23 +22,11 @@
             <tr>
                 <td>{{ theme.name }}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_theme_show', { 'id': theme.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_theme_edit', { 'id': theme.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    <a href="{{ path('admin_theme_show', { 'id': theme.id }) }}"><input type='button' class='btn btn-default' value='Voir'></a>
+                    <a href="{{ path('admin_theme_edit', { 'id': theme.id }) }}"><input type='button' class='btn btn-default' value='Modifier'></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_theme_new') }}">Create a new theme</a>
-        </li>
-    </ul>
 {% endblock %}
