--- a/src/AdminBundle/Resources/views/author/index.html.twig
+++ b/src/AdminBundle/Resources/views/author/index.html.twig
@@ -1,39 +1,32 @@
 {% extends 'AdminBundle::admin-layout.html.twig' %}
 
 {% block content %}
-    <h1>Authors list</h1>
+    <div class="row top-list">
+        <div class="row">
+            <h1 class="col-lg-4 col-sm-4">Liste des auteurs</h1>
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_author_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouvel auteur</button></a>
+        </div>
+    </div>
 
-    <table>
+    <table class="table table-bordered table-responsive table-striped" id="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for author in authors %}
             <tr>
-                <td><a href="{{ path('admin_author_show', { 'id': author.id }) }}">{{ author.id }}</a></td>
                 <td>{{ author.name }}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_author_show', { 'id': author.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_author_edit', { 'id': author.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    <a href="{{ path('admin_author_show', { 'id': author.id }) }}"><input type='button' class='btn btn-default' value='Voir'></a>
+                    <a href="{{ path('admin_author_edit', { 'id': author.id }) }}"><input type='button' class='btn btn-default' value='Modifier'></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_author_new') }}">Create a new author</a>
-        </li>
-    </ul>
 {% endblock %}
