--- a/src/AdminBundle/Resources/views/localisation/index.html.twig
+++ b/src/AdminBundle/Resources/views/localisation/index.html.twig
@@ -1,13 +1,20 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Localisations list</h1>
-    <table class="table table-bordered table-responsive">
+    <div class="row top-list">
+        <div class="row">
+            <h1 class="col-lg-5 col-sm-5">Liste des emplacements</h1>
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_localisation_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Ajouter un nouvel emplacement</button> </a>
+        </div>
+    </div>
+    <table class="table table-bordered table-responsive table-striped" id="table">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Adress</th>
-                <th>Telnum</th>
+                <th>Nom</th>
+                <th>Adresse</th>
+                <th>Téléphone</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -18,23 +25,11 @@
                 <td>{{ localisation.adress }}</td>
                 <td>{{ localisation.telNum }}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_localisation_show', { 'id': localisation.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_localisation_edit', { 'id': localisation.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    <a href="{{ path('admin_localisation_show', { 'id': localisation.id }) }}"><input type='button' class='btn btn-default' value='Voir'></a>
+                    <a href="{{ path('admin_localisation_edit', { 'id': localisation.id }) }}"><input type='button' class='btn btn-default' value='Modifier'></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_localisation_new') }}">Create a new localisation</a>
-        </li>
-    </ul>
 {% endblock %}
