--- a/src/AdminBundle/Resources/views/member/index.html.twig
+++ b/src/AdminBundle/Resources/views/member/index.html.twig
@@ -1,9 +1,15 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
+    <div class="row top-list">
+        <div class="row">
+            <h1 class="col-lg-4 col-sm-4">Liste des membres</h1>
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_member_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Ajouter un nouveau membre</button> </a>
+        </div>
+    </div>
 
-
-    <h1>Members list</h1>
     <!-- Modal -->
     <div id="" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -31,7 +37,7 @@
                 <a  href="{{ path('admin_member_index_select',{ 'select' : 'all' }) }}"> <button type="button" class="btn btn-default" value="all">Afficher tous les membres</button></a>
             {% endif %}
     </div>
-    <table id="table"
+    <table class="table-striped" id="table"
            data-toggle="table"
            data-url="{{ path("members_resp",{ 'select' :  select  }) }}"
            data-toolbar="#toolbar"
@@ -59,10 +65,6 @@
         </tr>
         </thead>
     </table>
-
-    <a href="{{ path('admin_member_new') }}"><button class="btn btn-success pull-right"><span class="glyphicon glyphicon-plus"></span> Ajouter un nouveau membre</button> </a>
-
-
 {% endblock %}
 
 {% block javascripts %}
@@ -110,7 +112,7 @@
                     $('.modal .modal-body').html(
                         '{{ form_start(form) }}'+
                         '{{ form_widget(form) }}'+
-                        '<input type="submit" class="btn btn-default" value="ajouter" />'+
+                        '<input type="submit" class="btn btn-default" value="Re-adhérer" />'+
                         '{{ form_end(form) }}'
 
                     );
