--- a/src/AdminBundle/Resources/views/paymentmethod/index.html.twig
+++ b/src/AdminBundle/Resources/views/paymentmethod/index.html.twig
@@ -1,12 +1,19 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Paymentmethods list</h1>
+    <div class="row top-list">
+        <div class="row">
+            <h1 class="col-lg-6 col-sm-6">Liste des moyens de paiement</h1>
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_paymentmethod_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau moyen de paiement</button></a>
+        </div>
+    </div>
 
-    <table class="table table-bordered table-responsive">
+    <table class="table table-bordered table-responsive table-striped" id="table">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -15,23 +22,11 @@
             <tr>
                 <td>{{ paymentMethod.name }}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_paymentmethod_show', { 'id': paymentMethod.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_paymentmethod_edit', { 'id': paymentMethod.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    <a href="{{ path('admin_paymentmethod_show', { 'id': paymentMethod.id }) }}"><input type='button' class='btn btn-default' value='Voir'></a>
+                    <a href="{{ path('admin_paymentmethod_edit', { 'id': paymentMethod.id }) }}"><input type='button' class='btn btn-default' value='Modifier'></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_paymentmethod_new') }}">Create a new paymentMethod</a>
-        </li>
-    </ul>
 {% endblock %}
