Adding tinymce for rules text area field

--- a/src/AdminBundle/Resources/views/game/edit.html.twig
+++ b/src/AdminBundle/Resources/views/game/edit.html.twig
@@ -27,6 +27,8 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
+    {{ tinymce_init() }}
+
     <script>
         $( function() {
             $( "#commonbundle_game_releaseDate" ).datepicker(
