--- a/src/AdminBundle/Resources/views/game/new.html.twig
+++ b/src/AdminBundle/Resources/views/game/new.html.twig
@@ -16,6 +16,7 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
+     {{ tinymce_init() }}
     <script>
         $( function() {
             $( "#commonbundle_game_releaseDate" ).datepicker(
