--- a/src/CommonBundle/Resources/views/Default/singleGame.html.twig
+++ b/src/CommonBundle/Resources/views/Default/singleGame.html.twig
@@ -8,7 +8,8 @@
 
     <img  id="single-game-image" src="{{ asset('uploads/images/' ~ game.image) }}" alt="Image du jeu {{ game.name }}"/>
     <div id="single-game-text">
-      <p>Règles : {{ game.rules }}</p>
+      <a href="{{ path('rules_pdf', { 'id': game.id }) }}"> Générer un PDF </a>
+      <p>Règles : {{ game.rules | raw }}</p>
       <p>Date de sortie : {{ game.releaseDate | date("d/m/Y") }}</p>
       <p> À partir de {{ game.ageMin }} ans</p>
     </div>
