--- a/src/AdminBundle/Resources/views/game/new.html.twig
+++ b/src/AdminBundle/Resources/views/game/new.html.twig
@@ -21,7 +21,7 @@
         $( function() {
             $( "#commonbundle_game_releaseDate" ).datepicker(
                     {
-                        yearRange: '1950:2050',
+                        yearRange: '1900:2050',
                         changeMonth: true,
                         changeYear: true,
                         altField: "#datepicker",
@@ -39,5 +39,18 @@
                     }
             );
         } );
+        $(document).ready(function () {
+            $('.checkbox').on('click',function () {
+                if ($('.traditionnel').is(':checked')){
+                    $('#commonbundle_game_releaseDate').attr('disabled', true);
+                    $('#commonbundle_game_releaseDate').datepicker("setDate", new Date(1900,1,1) );
+                } else {
+                    $('#commonbundle_game_releaseDate').prop('disabled', false);
+                }
+
+            });
+
+
+        })
     </script>
 {% endblock %}
