--- a/src/CommonBundle/Resources/views/common-layout.html.twig
+++ b/src/CommonBundle/Resources/views/common-layout.html.twig
@@ -27,12 +27,51 @@
 
 
 		<nav id="nav-bar">
-			<div class="nav-element"><a href="#">Qui sommes nous</a></div>
-			<div class="nav-element"><a href="#">Nos propositions</a></div>
-			<div class="nav-element"><a href="#">Nos prochaines animations</a></div>
-			<div class="nav-element"><a href="#">Nos dernières animations</a></div>
-			<div class="nav-element"><a href="#">Contact</a></div>
+			<ul>
+				<li class="nav-element"><a href="#">Qui sommes nous</a>
+					<ul class="first-ul">
+						<li><a href="#">Nos status</a></li>
+						<li><a href="#">Partenaires</a></li>
+					</ul>
+				</li>
+				<li class="nav-element"><a href="#">Nos propositions</a>
+					<ul class="first-ul">
+						<li><a href="#">Notre plaquette</a></li>
+						<li class="sousmenu-li"><a href="#">Nos jeux</a>
+							<ul class="second-ul">
+								<li><a href="#">Jeux Géants</a></li>
+								<li><a href="#">Jeux traditionnels</a></li>
+								<li><a href="#">jeux de société</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Organisation de tournois</a></li>
+						<li><a href="#"></a>Organisation de rallye</li>
+					</ul>
+				</li>
+				<li class="nav-element"><a href="#">Nos prochaines animations</a>
+					<ul class="first-ul">
+						<li><a href="#">Les soirées Strata'jm</a></li>
+					</ul>
+				</li>
+				<li class="nav-element"><a href="#">Nos dernières animations</a>
+					<ul class="first-ul">
+						<li><a href="#">Tournoi inter-quartier 2015</a></li>
+						<li><a href="#">Prévention SIDA-Chelles</a></li>
+						<li class="sousmenu-li"><a href="#">Jeux GRIAL</a>
+							<ul class="second-ul">
+								<li><a href="#">Décembre</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Fête du jeux de Thoiry (78)</a></li>
+						<li><a href="#"></a>Colombes Eco-Tour</li>
+					</ul>
+				</li>
+				<li class="nav-element"><a href="#">Contact</a></li>
+			</ul>
 		</nav>
+
+
+		</div>
 	</header>
 
 	{% block content %}
