--- a/src/AdminBundle/Resources/views/congestion/index.html.twig
+++ b/src/AdminBundle/Resources/views/congestion/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row top-list">
         <div class="row">
-            <h1 class="col-lg-5 col-sm-5">Types d'emcombrement</h1>
+            <h1>Types d'emcombrement</h1>
         </div>
         <div class="row">
             <a href="{{ path('admin_congestion_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau type d'emcombrement</button></a>
