--- a/src/AdminBundle/Resources/views/localisation/index.html.twig
+++ b/src/AdminBundle/Resources/views/localisation/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row top-list">
         <div class="row">
-            <h1 class="col-lg-5 col-sm-5">Liste des emplacements</h1>
+            <h1>Liste des emplacements</h1>
         </div>
         <div class="row">
             <a href="{{ path('admin_localisation_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Ajouter un nouvel emplacement</button> </a>
