--- a/src/AdminBundle/Resources/views/borrow/index.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row top-list">
         <div class="row">
-        <h1 class="col-lg-4 col-sm-4">Emprunts en cours</h1>
+        <h1>Emprunts en cours</h1>
         </div>
         <div class="row">
             <a href="{{ path('admin_borrow_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Déclarer un nouvel emprunt</button></a>
