--- a/src/AdminBundle/Resources/views/copy/index.html.twig
+++ b/src/AdminBundle/Resources/views/copy/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row top-list">
         <div class="row">
-            <h1 class="col-lg-4 col-sm-4">Liste des exemplaires</h1>
+            <h1>Liste des exemplaires</h1>
         </div>
         <div class="row">
             <a href="{{ path('admin_copy_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouvel exemplaire</button></a>
