--- a/src/AdminBundle/Resources/views/country/index.html.twig
+++ b/src/AdminBundle/Resources/views/country/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
      <div class="row top-list">
         <div class="row">
-            <h1 class="col-lg-4 col-sm-4">Liste des pays</h1>
+            <h1>Liste des pays</h1>
         </div>
         <div class="row">
             <a href="{{ path('admin_country_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau pays</button></a>
