--- a/src/AdminBundle/Resources/views/game/edit.html.twig
+++ b/src/AdminBundle/Resources/views/game/edit.html.twig
@@ -4,12 +4,24 @@
     <h1>Game edit</h1>
 
     {{ form_start(edit_form) }}
-        {{ form_label(edit_form.image) }}
-        <img style="width:10%;" src="{{ asset('uploads/images/' ~ oldImageName) }}"/>
-        {{ form_widget(edit_form.image) }}
-
-        {{ form_widget(edit_form.nbcopies, {'attr': {'disabled': 'disabled' } }) }}
-        {{ form_widget(edit_form) }}
+        <div class="row">
+            {{ form_label(edit_form.image) }}
+            <div class="col s12">
+                <img style="width:10%;" src="{{ asset('uploads/images/' ~ oldImageName) }}"/>
+            </div>
+            {{ form_widget(edit_form.image) }}
+        </div>
+        <div class="row">
+            {{ form_label(edit_form.board_image) }}
+            <div class="col s12">
+                <img style="width:10%;" src="{{ asset('uploads/images/' ~ oldBoardImageName) }}"/>
+            </div>
+            {{ form_widget(edit_form.board_image) }}
+        </div>
+        <div class="row">
+            {{ form_widget(edit_form.nbcopies, {'attr': {'disabled': 'disabled' } }) }}
+            {{ form_widget(edit_form) }}
+        </div>
 
         <input type="submit" value="Edit" />
     {{ form_end(edit_form) }}
