--- a/src/AdminBundle/Resources/views/paymentmethod/index.html.twig
+++ b/src/AdminBundle/Resources/views/paymentmethod/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row top-list">
         <div class="row">
-            <h1 class="col-lg-6 col-sm-6">Liste des moyens de paiement</h1>
+            <h1>Liste des moyens de paiement</h1>
         </div>
         <div class="row">
             <a href="{{ path('admin_paymentmethod_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau moyen de paiement</button></a>
