--- a/src/AdminBundle/Resources/views/players/index.html.twig
+++ b/src/AdminBundle/Resources/views/players/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row top-list">
         <div class="row">
-            <h1 class="col-lg-6 col-sm-6">Liste des nombres de joueurs</h1>
+            <h1>Liste des nombres de joueurs</h1>
         </div>
         <div class="row">
             <a href="{{ path('admin_players_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau nombre de joueurs</button></a>
