--- a/src/AdminBundle/Resources/views/borrow/index.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/index.html.twig
@@ -32,7 +32,7 @@
             <th data-field="reference">Référence</th>
             <th data-field="borrower" data-formatter="borrowerFormatter">Emprunté par</th>
             <th data-field="borrowdate">Date d'emprunt</th>
-            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Action</th>
+            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Actions</th>
         </tr>
         </thead>
     </table>
