--- a/src/AdminBundle/Resources/views/game/index.html.twig
+++ b/src/AdminBundle/Resources/views/game/index.html.twig
@@ -34,7 +34,7 @@
             <th data-field="age">Age</th>
             <th data-field="rules">Règles</th>
             <th data-field="releaseDate">Date de sortie</th>
-            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Action</th>
+            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Actions</th>
         </tr>
         </thead>
     </table>
