--- a/src/AdminBundle/Resources/views/game/show.html.twig
+++ b/src/AdminBundle/Resources/views/game/show.html.twig
@@ -3,7 +3,10 @@
 {% block content %}
 <div class="row top">
     <img src="{{ asset('uploads/images/' ~ game.image) }}" onerror="this.style.display='none'"/>
-    <h1>{{ game.name }}</h1>
+    <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6">
+        <h1>{{ game.name }}</h1>
+        <a href="{{ asset('uploads/images/' ~ game.boardImage) }}" target="_blank"><button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-print"></span> Imprimer plateau</button></a>
+    </div>
 </div>
 <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6 show">
     <table class="table table-responsive table-striped">
