--- a/src/AdminBundle/Resources/views/congestion/edit.html.twig
+++ b/src/AdminBundle/Resources/views/congestion/edit.html.twig
@@ -1,21 +1,21 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Congestion edit</h1>
+    <h1>Modification de l'encombrement</h1>
 
     {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+        <div class="row">
+            {{ form_widget(edit_form) }}
+        </div>
+        <div class="row">
+            <a href="{{ path('admin_congestion_index') }}"><button type="button" class="btn btn-primary">Retour à la liste</button></a>
+            <button type="submit" class="btn btn-success pull-right">Modifier</button>            
+        </div>   
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_congestion_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div class="row">
+        {{ form_start(delete_form) }}
+            <input type="submit" class="btn btn-danger pull-right" value="Supprimer">
+        {{ form_end(delete_form) }}
+    </div>
 {% endblock %}
