--- a/src/AdminBundle/Resources/views/congestion/new.html.twig
+++ b/src/AdminBundle/Resources/views/congestion/new.html.twig
@@ -1,16 +1,11 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Congestion creation</h1>
+    <h1>Création d'un encombrement</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <a href="{{ path('admin_congestion_index') }}"><button type="button" class="btn btn-primary">Retour à la liste</button></a>
+        <button type="submit" class="btn btn-success pull-right">Créer</button>
     {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_congestion_index') }}">Back to the list</a>
-        </li>
-    </ul>
 {% endblock %}
