--- a/src/AdminBundle/Resources/views/member/index.html.twig
+++ b/src/AdminBundle/Resources/views/member/index.html.twig
@@ -61,7 +61,7 @@
             <th data-field="lastname">Nom</th>
             <th data-field="email" data-formatter="emailFormatter">Email</th>
             <th data-field="telNum">Numéro téléphone</th>
-            <th data-field="action" data-formatter="actionFormatter"  data-events="actionEvents">Action</th>
+            <th data-field="action" data-formatter="actionFormatter"  data-events="actionEvents">Actions</th>
         </tr>
         </thead>
     </table>
