--- a/src/AdminBundle/Resources/views/type/index.html.twig
+++ b/src/AdminBundle/Resources/views/type/index.html.twig
@@ -6,7 +6,7 @@
             <h1>Liste des types</h1>
         </div>
         <div class="row">
-            <a href="{{ path('admin_type_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau thème</button></a>
+            <a href="{{ path('admin_type_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau type</button></a>
         </div>
     </div>
     <table class="table table-bordered table-responsive table-striped" id="table">
