Show rules with html balise and don't show rules on single game page

--- a/src/AdminBundle/Resources/views/game/show.html.twig
+++ b/src/AdminBundle/Resources/views/game/show.html.twig
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <th>Règles</th>
-            <td>{{ game.rules }}</td>
+            <td>{{ game.rules | raw }}</td>
         </tr>
         <tr>
             <th>Date de sortie</th>
