--- a/src/CommonBundle/Resources/views/Default/singleGame.html.twig
+++ b/src/CommonBundle/Resources/views/Default/singleGame.html.twig
@@ -11,8 +11,7 @@
       <div>
         <a href="{{ asset('uploads/images/' ~ game.boardImage) }}" target="_blank"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-print"></span> Imprimer plateau</button></a>
       </div>
-      <a href="{{ path('rules_pdf', { 'id': game.id }) }}"> Générer un PDF </a>
-      <p>Règles : {{ game.rules | raw }}</p>
+      <a href="{{ path('rules_pdf', { 'id': game.id }) }}">Télécharger les règles du jeu</a>
       <p>Date de sortie : {{ game.releaseDate | date("d/m/Y") }}</p>
       <p> À partir de {{ game.ageMin }} ans</p>
     </div>
